Testing issue with header size after animation on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .social {
